# handwrittenSymbolRecognition

./: .gitignore  Gui.py  LICENSE  README.md  index.py  main.py  pyproject.toml  requirements.txt
require/: Paintboard.py  dictionary.txt  network.py
train/: train.py
