[tool.poetry]
name = "handwritten digit recognition"
version = "1.0.0"
description = "基于ResNet的手写数字识别"
authors = ["tansen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.4.3"
numpy = "1.24.0"
pillow = "9.1.1"
pyqt5 = "5.15.9"
torch = "1.12.0"
torchvison = "0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
