[tool.poetry]
name = "handwritten digit recognition"
version = "0.2.0"
description = "基于ResNet的手写数字识别"
authors = ["tansen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "3.10.0"
numpy = "1.24.0"
pillow = "10.0.1"
pyqt5 = "5.15.10"
pyqt5-qt5 = "5.15.2"
torch = "2.4.1"
torchvision = "0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
